2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README.browser-plugin: Fix typo spotted
	by Yan Morin <progysm@gmail.com>, the keyword is "disabled", not
	"disable"

============ Version 2.24.0

2008-09-21  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.24.0
	* Makefile.am: Remove COPYING.LIB from dist

2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* COPYING.LIB: Remove obsolete file, spotted by
	Christian Persch

2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_remote): Fix missing break
	statement, spotted by Robin Stocker <robin@nibor.org>

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt:
	* src/totem-menu.c (totem_action_add_recent):
	* src/totem-menu.h: Fix recent-menu not adding anything
	because it couldn't get a fast mime-type for the file,
	(Closes: #551360), also fix addition of streams to the
	list, otherwise nothing to go in the "Open Location"
	dialogue

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_mrls): Also allow the Fluendo MPEG
	demuxers recently moved to GStreamer main

2008-09-08  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-plugins-engine.c
	(totem_plugins_engine_activate_plugin): Don't ever disable
	an invisible plugin

2008-09-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Add support for
	the application/x-ms-wmp mime-type (Closes: #550157)

============ Version 2.23.91

2008-08-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.23.91
	* data/Makefile.am: Fix make dist

2008-08-28  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_handle_application_message), (bacon_video_widget_close):
	* src/backend/bacon-video-widget-xine.c (frame_output_cb),
	(bacon_video_widget_close):
	Never auto-resize a stream that's already been resized, wait for